; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_vdbesort.c_vdbeSorterExtendFile.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_vdbesort.c_vdbeSorterExtendFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i64 }
%struct.TYPE_10__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { i32 }

@SQLITE_FCNTL_CHUNK_SIZE = common dso_local global i32 0, align 4
@SQLITE_FCNTL_SIZE_HINT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_11__*, %struct.TYPE_10__*, i64)* @vdbeSorterExtendFile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vdbeSorterExtendFile(%struct.TYPE_11__* %0, %struct.TYPE_10__* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_11__*, align 8
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %4, align 8
  store %struct.TYPE_10__* %1, %struct.TYPE_10__** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i64, i64* %6, align 8
  %10 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp sle i64 %9, %12
  br i1 %13, label %14, label %35

14:                                               ; preds = %3
  %15 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = icmp sge i32 %19, 3
  br i1 %20, label %21, label %35

21:                                               ; preds = %14
  store i8* null, i8** %7, align 8
  store i32 4096, i32* %8, align 4
  %22 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %23 = load i32, i32* @SQLITE_FCNTL_CHUNK_SIZE, align 4
  %24 = call i32 (%struct.TYPE_10__*, i32, ...) @sqlite3OsFileControlHint(%struct.TYPE_10__* %22, i32 %23, i32* %8)
  %25 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %26 = load i32, i32* @SQLITE_FCNTL_SIZE_HINT, align 4
  %27 = call i32 (%struct.TYPE_10__*, i32, ...) @sqlite3OsFileControlHint(%struct.TYPE_10__* %25, i32 %26, i64* %6)
  %28 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %29 = load i64, i64* %6, align 8
  %30 = trunc i64 %29 to i32
  %31 = call i32 @sqlite3OsFetch(%struct.TYPE_10__* %28, i32 0, i32 %30, i8** %7)
  %32 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %33 = load i8*, i8** %7, align 8
  %34 = call i32 @sqlite3OsUnfetch(%struct.TYPE_10__* %32, i32 0, i8* %33)
  br label %35

35:                                               ; preds = %21, %14, %3
  ret void
}

declare dso_local i32 @sqlite3OsFileControlHint(%struct.TYPE_10__*, i32, ...) #1

declare dso_local i32 @sqlite3OsFetch(%struct.TYPE_10__*, i32, i32, i8**) #1

declare dso_local i32 @sqlite3OsUnfetch(%struct.TYPE_10__*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
